--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["express", "mock", "server", "logging"],
+  "keywords": [
+    "express",
+    "mock",
+    "server",
+    "logging"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "express-xml-bodyparser": "^0.4.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
